--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Password Generator</title>
     <link
+      rel="shortcut icon"
+      href="./assets/img/icon.svg"
+      type="image/x-icon"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
   <body>
     <div class="wrapper"></div>
@@ -109,6 +114,20 @@
         </p>
       </div>
     </div>
+    <footer>
+      Made with
+      <svg
+        aria-hidden="true"
+        focusable="false"
+        role="img"
+        viewBox="0 0 512 512"
+      >
+        <path
+          d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
+        ></path>
+      </svg>
+      by <a target="_blank" href="https://rachitjain.netlify.com/">Rachit</a>
+    </footer>
     <div class="pop-up-container">
       <div class="pop-up">
         <h3 class="pop-up-headline">Generated random password</h3>
@@ -228,6 +247,6 @@
       </div>
     </div>
 
-    <script src="./app.js"></script>
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
