--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Random Password Generator</title>
     <link
       rel="shortcut icon"
-      href="./img/icon.svg"
+      href="./assets/img/icon.svg"
       type="image/x-icon"
     />
     <link
